# EFS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.c
include/: algo.h  arg_parser.h  data.h  file.h  file_stream.h  log.h  search.h  utils.h
src/: arg_parser.c  file.c  file_stream.c  log.c  string_search.c  utils.c
src/algos/: bm.c  bm_full.c  bmh.c  hash_set.c  rabin_karp.c
src/file_stream/: dir_stream.c  file_stream.c  line_stream.c
src/search/: bm_search_functions.c  file_search.c  rk_search_functions.c  search.c  search_functions.c
tests/: file_subtest.sh  out.txt  pattern.txt  pattern_subtest.sh  test.bash  test.sh  test_generator.py  traversal_subtest.sh
tests/generator/: pattern_gen.py  text_gen.py
